With SSL/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: app=devopsanu,Team=devops
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123456789012:certificate/abcd1234-abcd-1234-abcd-1234abcd1234  
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: nginx-app-dev.devopsanu.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
    - host: nginx-app-qa.devopsanu.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
